# FSExplorer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scanner.rs
src/components/: AnalysisView.css  AnalysisView.tsx  Breadcrumb.css  Breadcrumb.tsx  ContextMenu.css  ContextMenu.tsx  DrivePicker.css  DrivePicker.tsx  ListView.css  ListView.tsx  LogoMark.tsx  ScanProgressView.css  ScanProgressView.tsx  StatusBar.css  StatusBar.tsx  Toolbar.css  Toolbar.tsx  TreeMap.css  TreeMap.tsx
src/hooks/: useScan.ts
src/types/: index.ts
