[package]
name = "wincleaner"
version = "0.1.0"
description = "FSExplorer - Disk Space Analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "wincleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1"
jwalk = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
